--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -31,25 +31,7 @@
         </xpath>
         <xpath expr="//div[hasclass('page')]" position="inside">
             <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)"/>
-            <div class="page ">
-                <div t-set="address">
-                    <span>
-                        <strong>Supplier Address</strong>
-                    </span>
-                    <t t-if="o.partner_id.parent_id.name">
-                        <div>
-                            <span t-field="o.partner_id.name"/>
-                            <br/>
-                            <span t-field="o.partner_id.parent_id.name"/>
-                        </div>
-                        <div t-field="o.partner_id"
-                             t-options='{"widget": "contact", "fields": ["address", "phone","email"], "no_marker": True, "phone_icons": True}'/>
-                    </t>
-                    <t t-else="">
-                        <div t-field="o.partner_id"
-                             t-options='{"widget": "contact", "fields": ["address","name","phone","email"], "no_marker": True, "phone_icons": True}'/>
-                    </t>
-                </div>
+            <div class="page">
                 <t t-set="report_info" class="col-6 text-right mb4">
                     <h3 t-if="o.state not in ['cancel','reject']">Approved Order</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
@@ -59,81 +41,82 @@
                             <t t-esc="o.name"/>
                         </strong>
                     </h4>
-                    <strong t-if="o.state in ['purchase','done']">Date:
+                    <strong t-if="o.state in ['purchase','done',]">Date:
                         <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
                     </strong>
-                    <strong t-if="o.state in ['draft','sent']">Date:
+                    <strong t-if="o.state not  in ['purchase','done']">Date:
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                     </strong>
                 </t>
-                <t t-if="o.dest_address_id">
-                    <t t-set="information_block">
-                        <strong>Shipping Address</strong>
-                            <t t-if="o.dest_address_id.parent_id.name">
-                                <div>
-                                    <span t-field="o.dest_address_id.name"/>
-                                    <br/>
-                                    <span t-field="o.dest_address_id.parent_id.name"/>
-                                </div>
-                                <div t-field="o.dest_address_id"
-                                     t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
-                            </t>
-                            <t t-else="">
-                                <div t-field="o.dest_address_id"
-                                     t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
-                                     name="purchase_shipping_address"/>
-                            </t>
-                    </t>
-                </t>
-                <t t-set="custom_information_block">
+                <t t-set="address">
                     <div>
-                        <t t-if="o.state in ['draft','sent']">
-                            <strong>Purchase Order #:</strong>
-                            <t t-esc="o.name"/>
-                            <br/>
-                        </t>
-                        <t t-if="o.state not in ['draft','sent']">
-                            <strong>Approved Order:</strong>
-                            <t t-esc="o.name"/>
-                            <br/>
-                        </t>
-                        <!-- <t t-if="o.state in ['draft','sent']">
-                            <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t> -->
-                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date" >
-                            <div class="text-danger">
-                                <strong >Order Arrive By Date:</strong>
-                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
-                                <br/>
-                            </div>
-                        </t>
-                        <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
-                            <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t>
-
+                        <strong>Supplier :</strong>
+                        <t t-esc="o.partner_id.name"/>
+                        <br/>
                         <strong>BookPal Account # :</strong>
                         <t t-esc="428475"/>
                         <br/>
-                        <t t-if="o.payment_term_id">
+                        <t>
                             <strong>Supplier Terms :</strong>
                             <t t-esc="o.payment_term_id.name"/>
                             <br/>
                         </t>
-                        <strong>Shipping Method :</strong>
-                        <span>Free Delivery Method</span>
-                        <br/>
-                        <t t-if="o.shipping_instructions">
-                            <strong>Shipping Instructions :</strong>
-                            <t t-esc="o.shipping_instructions.name"/>
-                            <br/>
-                        </t>
-                        <strong>Salesperson:</strong>
-                        <t t-esc="o.user_id.name"/>
+
                     </div>
+                </t>
+                <t t-set="information_block">
+                    <t>
+                        <div class="text-danger">
+                            <strong>Order Arrive By Date:</strong>
+                            <t t-esc="o.date_planned" t-options='{"widget": "date"}'/>
+                            <br/>
+                        </div>
+                    </t>
+                    <t t-if="o.need_by_date">
+                        <div class="text-danger">
+                            <strong>Order Need By Date:</strong>
+                            <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                            <br/>
+                        </div>
+                    </t>
+                    <strong>Shipping Method :</strong>
+<!--                    <t t-esc="o.purchase_tracking_ids.carrier_id.name"/>-->
+                    <span t-esc="', '.join(map(lambda x: (x.name), o.purchase_tracking_ids.carrier_id))"/>
+                    <br/>
+                    <t>
+                        <strong>Shipping Instructions :</strong>
+                        <t t-esc="o.shipping_instructions.name"/>
+                        <br/>
+                    </t>
+                </t>
+                <t t-if="o.dest_address_id">
+                    <t t-set="custom_information_block">
+                        <strong>Ship To Address</strong>
+                        <t t-if="o.dest_address_id.parent_id.name">
+                            <div>
+                                <span t-field="o.dest_address_id.name"/>
+                                <br/>
+                                <span t-field="o.dest_address_id.parent_id.name"/>
+                            </div>
+                            <div t-field="o.dest_address_id"
+                                 t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                        </t>
+                        <t t-else="">
+                            <div t-field="o.dest_address_id"
+                                 t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
+                                 name="purchase_shipping_address"/>
+                        </t>
+                    </t>
+                </t>
+                <t t-else="">
+                    <t t-set="custom_information_block">
+                        <strong>Ship To Address</strong>
+                        <div t-if="o.picking_type_id and o.picking_type_id.warehouse_id">
+                            <span t-field="o.picking_type_id.warehouse_id.name"/>
+                            <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                                 t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                        </div>
+                    </t>
                 </t>
             </div>
             <t t-if="doc_model == 'purchase.order' and o.state in ['draft','sent'] and xmlid == 'purchase.report_purchaseorder'">
@@ -302,10 +285,13 @@
                 <p class="mb-1" t-field="o.notes" style="margin-left: 50px;"/>
             </div>
         </xpath>
-<!--        <xpath expr="//t[@t-set='information_block']" position="replace"/>-->
-        <xpath expr="//t[@t-set='information_block']//strong" position="replace">
-            <strong>Shipping Address</strong>
-        </xpath>
+<!--        <xpath expr="//t[@t-if='o.dest_address_id']" position="replace"/>-->
+        <xpath expr="//t[@t-set='information_block']" position="replace"/>
+<!--        <xpath expr="//t[@t-set='information_block']//strong" position="replace">-->
+<!--            <strong>Ship To Address</strong>-->
+<!--        </xpath>-->
+        <xpath expr="//t[@t-set='address']/div" position="replace"/>
+<!--            <strong>Shipping Address</strong>-->
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//div[@id='total']" position="replace"/>
         <xpath expr="//h2[1]" position="replace"/>
@@ -315,6 +301,7 @@
             <attribute name="style">margin-bottom: 0px; font-size: 14px !important;</attribute>
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="before">
+            <div class="o_boxed_header mt-3"/>
             <t t-if="o.special_pick_note">
                 <div class='row mt-4'>
                     <div class="col-12" style="margin-left: 5px; margin-bottom: 20px; ">
