--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -7,27 +7,61 @@
         <xpath expr="//div[hasclass('page')]" position="inside">
             <t t-set="o" t-value="o.with_context(lang=o.partner_id.lang)"/>
             <div class="page">
-                <div t-set="address">
-                    <span>
-                        <strong>Supplier Address</strong>
-                    </span>
-                    <t t-if="o.partner_id.parent_id.name">
-                        <div>
-                            <span t-field="o.partner_id.name"/>
+                <t t-set="address">
+                    <div>
+                        <strong>Supplier :</strong>
+                        <t t-esc="o.partner_id.name"/>
+                        <br/>
+                        <strong>BookPal Account # :</strong>
+                        <t t-esc="428475"/>
+                        <br/>
+                        <t>
+                            <strong>Supplier Terms :</strong>
+                            <t t-esc="o.payment_term_id.name"/>
                             <br/>
-                            <span t-field="o.partner_id.parent_id.name"/>
+                        </t>
+                    </div>
+                </t>
+                <t t-set="information_block">
+                    <t>
+                        <div class="text-danger">
+                            <strong>Order Arrive By Date:</strong>
+                            <t t-esc="o.date_planned" t-options='{"widget": "date"}'/>
+                            <br/>
                         </div>
-                        <div t-field="o.partner_id"
-                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
                     </t>
-                    <t t-else="">
-                        <div t-field="o.partner_id"
-                             t-options='{"widget": "contact", "fields": ["address","name","phone"], "no_marker": True, "phone_icons": True}'/>
+                    <t t-if="o.need_by_date">
+                        <div class="text-danger">
+                            <strong>Order Need By Date:</strong>
+                            <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                            <br/>
+                        </div>
                     </t>
-                </div>
+                    <strong>Shipping Method :</strong>
+                    <span t-esc="', '.join(map(lambda x: (x.name), o.purchase_tracking_ids.carrier_id))"/>
+                    <br/>
+                    <t t-if="o.shipping_instructions">
+                        <strong>Shipping Instructions :</strong>
+                        <t t-esc="o.shipping_instructions.name"/>
+                        <br/>
+                    </t>
+                </t>
+                <t t-set="report_info" class="col-6 text-right mb4">
+                    <h3 t-if="o.state not in ['cancel','reject']">Purchase Order</h3>
+                    <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
+                    <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
+                    <h4>
+                        <strong>
+                            <t t-esc="o.name"/>
+                        </strong>
+                    </h4>
+                    <strong t-if="o.state in ['purchase','done','draft','sent','to approve']">Date:
+                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                    </strong>
+                </t>
                 <t t-if="o.dest_address_id">
-                    <t t-set="information_block">
-                        <strong>Shipping Address:</strong>
+                    <t t-set="custom_information_block">
+                        <strong>Ship To Address</strong>
                         <t t-if="o.dest_address_id.parent_id.name">
                             <div>
                                 <span t-field="o.dest_address_id.name"/>
@@ -44,69 +78,15 @@
                         </t>
                     </t>
                 </t>
-
-                <t t-set="report_info" class="col-6 text-right mb4">
-                    <h3 t-if="o.state not in ['cancel','reject']">Purchase Order</h3>
-                    <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
-                    <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
-                    <h4>
-                        <strong>
-                            <t t-esc="o.name"/>
-                        </strong>
-                    </h4>
-                    <strong t-if="o.state in ['purchase','done','draft','sent']">Date:
-                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                    </strong>
-                </t>
-                <t t-set="custom_information_block">
-                    <div>
-                        <t t-if="o.state in ['draft','sent']">
-                            <strong>Purchase Order #:</strong>
-                            <t t-esc="o.name"/>
-                            <br/>
-                        </t>
-                        <t t-if="o.state not in ['draft','sent']">
-                            <strong>Approved Order:</strong>
-                            <t t-esc="o.name"/>
-                            <br/>
-                        </t>
-                        <!-- <t t-if="o.state in ['draft','sent']">
-                            <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t> -->
-                        <!-- <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']"> -->
-                        <t t-if="o.need_by_date">
-                            <div class="text-danger">
-                                <strong>Order Need By Date:</strong>
-                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
-                                <br/>
-                            </div>
-                        </t>
-                        <!-- <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
-                            <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t> -->
-                        <strong>BookPal Account # :</strong>
-                        <t t-esc="428475"/>
-                        <br/>
-                        <t t-if="o.payment_term_id">
-                            <strong>Supplier Terms :</strong>
-                            <t t-esc="o.payment_term_id.name"/>
-                            <br/>
-                        </t>
-                        <strong>Shipping Method :</strong>
-                        <span>Free Delivery Method</span>
-                        <br/>
-                        <t t-if="o.shipping_instructions">
-                            <strong>Shipping Instructions :</strong>
-                            <t t-esc="o.shipping_instructions.name"/>
-                            <br/>
-                        </t>
-                        <strong>Salesperson:</strong>
-                        <t t-esc="o.user_id.name"/>
-                    </div>
+                <t t-else="">
+                    <t t-set="custom_information_block">
+                        <strong>Ship To Address</strong>
+                        <div t-if="o.picking_type_id and o.picking_type_id.warehouse_id">
+                            <span t-field="o.picking_type_id.warehouse_id.name"/>
+                            <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                                 t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                        </div>
+                    </t>
                 </t>
             </div>
         </xpath>
@@ -202,6 +182,7 @@
             </t>
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm')]" position="before">
+            <div class="o_boxed_header mt-3 mb-1"/>
             <t t-if="o.special_pick_note">
                 <div class='row mt-4'>
                     <div class="col-12" style="margin-left: 5px; margin-bottom: 20px; ">
@@ -220,11 +201,11 @@
                 <p class="mb-1" t-field="o.notes" style="margin-left: 50px;"/>
             </div>
         </xpath>
-        <xpath expr="//div[@id='informations']" position="replace"/>
+<!--        <xpath expr="//div[@id='informations']" position="replace"/>-->
         <xpath expr="//t[@t-set='information_block']" position="replace"/>
-         <xpath expr="//t[@t-set='information_block']//strong" position="replace">
-            <strong>Shipping Address</strong>
-        </xpath>
+<!--         <xpath expr="//t[@t-set='information_block']//strong" position="replace">-->
+<!--            <strong>Shipping Address</strong>-->
+<!--        </xpath>-->
         <xpath expr="//h2[1]" position="replace"/>
     </template>
 </odoo>
