[FIX][##19383] Changed date to datetime and in correct timezone in all reports
(cherry picked from commit afcde1f610268ad0689a5a8248b64d6cd521881c)

--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -94,7 +94,7 @@
                            t-as="purchase">
                             <div class="text-danger">
                                 <strong>Order Arrive By Date:</strong>
-                                <t t-esc="purchase.date_order" t-options='{"widget": "date"}'/>
+                                <t t-esc="context_timestamp(purchase.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
                                 <br/>
                             </div>
                         </t>
