--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -60,10 +60,11 @@
                         </strong>
                     </h4>
                     <strong t-if="o.state in ['purchase','done']">Date:
-                        <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
+                        <!-- <t t-esc="o.date_approve" t-options="{'widget': 'datetime'}"/> -->
+                        <t t-esc="context_timestamp(o.date_approve).strftime('%m/%d/%Y, %H:%M:%S')"/>
                     </strong>
-                    <strong t-if="o.state in ['draft','sent']">Date:
-                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                    <strong t-if="o.state not in ['purchase','done']">Date:
+                        <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
                     </strong>
                 </t>
                 <t t-if="o.dest_address_id">
@@ -105,13 +106,13 @@
                         <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date" >
                             <div class="text-danger">
                                 <strong >Order Arrive By Date:</strong>
-                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                                <t t-esc="context_timestamp(o.need_by_date).strftime('%m/%d/%Y, %H:%M:%S')"/>
                                 <br/>
                             </div>
                         </t>
                         <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                            <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
                             <br/>
                         </t>
 
