--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -55,7 +55,7 @@
                         </strong>
                     </h4>
                     <strong t-if="o.state in ['purchase','done','draft','sent']">Date:
-                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                        <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
                     </strong>
                 </t>
                 <t t-set="custom_information_block">
@@ -79,7 +79,7 @@
                         <t t-if="o.need_by_date">
                             <div class="text-danger">
                                 <strong>Order Need By Date:</strong>
-                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                                <t t-esc="context_timestamp(o.need_by_date).strftime('%m/%d/%Y, %H:%M:%S')"/>
                                 <br/>
                             </div>
                         </t>
