[IMP] Bug #19354 - solved issue of related field should be readonly at PO
(cherry picked from commit c075ddc6b6b8fcae5e3ba4f65a06ab86013803e5)

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -161,9 +161,9 @@
                     <group name="shipping_method_instructions" string="Shipping Method and Instructions">
                         <group>
                             <field name="rush_status_id"/>
-                            <field name="order_shipping_desc"/>
-                            <field name="default_supplier_shipping"/>
-                            <field name="freight_charges" style="max-height: 25px;"/>
+                            <field name="order_shipping_desc" />
+                            <field name="default_supplier_shipping" />
+                            <field name="freight_charges" />
                         </group>
                         <group>
                             <field name="rush_shipping_nuances"/>
