--- a/bigcommerce_odoo_integration/views/bigcommerce_stock_picking_view.xml
+++ b/bigcommerce_odoo_integration/views/bigcommerce_stock_picking_view.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
                 <header>
                     <!--<button name="get_order_shipment" string="Get Shipment Info" type="object" class="oe_stat_button" attrs="{'invisible':[('bigcommerce_shimpment_id', '!=', False)]}"></button> -->
-                    <button name="export_shipment_to_bigcommerce" string="Create Shipment" type="object" class="oe_stat_button" attrs="{'invisible':[('bigcommerce_shimpment_id', '!=', False)]}" groups="bigcommerce_odoo_integration.group_hide_export_button"></button>
+                    <button name="export_shipment_to_bigcommerce" string="Create Shipment" type="object" class="oe_stat_button" attrs="{'invisible':[('bigcommerce_shimpment_id', '!=', False)]}"></button>
                 </header>
                 <xpath expr="//sheet/notebook/page[@name='extra']" position="inside">
                     <group>
