[FIX] Fixed the negative pending qty issue, added is automated boolean in tracking wiz and added a table of log for tracking created by automation
(cherry picked from commit 8ce9961e48e9b3d1e5ccaf31999af64007635329)

--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -25,6 +25,7 @@
                             <field name="date_approve" widget="date"/>
                             <field name="pro_number" required="0" string="PRO No." attrs="{'readonly': [('is_read_only', '=', True)]}" />
                             <field name="status" required="1" attrs="{'readonly': [('is_read_only', '=', True)]}" />
+                            <field name="is_automated" readonly="1"/>
                         </group>
                     </group>
                     <notebook>
