--- a/bista_sale/views/seller_report_views.xml
+++ b/bista_sale/views/seller_report_views.xml
@@ -10,6 +10,7 @@
                     <field name="order_date"/>
                     <field name="product_id"/>
                     <field name="sku"/>
+                    <field name="partner_id"/>
                     <field name="customer_email"/>
                     <field name="industry_id"/>
                     <field name="quantity"/>
@@ -19,6 +20,8 @@
                     <field name="customer_segment"/> -->
                     <field name="order_company"/>
                     <field name="order_status"/>
+                    <field name="report_type"/>
+                    <field name="fulfilment_project"/>
                </tree>
             </field>
         </record>
