[FIX] - Feature #19314 - Move the industry field main screen to lead details tab
(cherry picked from commit 8d9ea5eabe61050e9a15ebf1d41f8b38f3849a78)

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -69,6 +69,7 @@
                 <page name="important_details" string="Lead Details">
                     <group>
                         <group>
+                            <field name="industry_id" options="{'no_create': True}"/>
                             <field name="source"/>
                             <field name="source_notes"/>
                             <field name="referring_organization" domain="[('company_type', '=', 'company')]"/>
