--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -73,7 +73,7 @@
                             <field name="source"/>
                             <field name="source_notes"/>
                             <field name="referring_organization" domain="[('company_type', '=', 'company')]"/>
-                            <field name="referal_source" domain="[('company_type', '!=', 'company'),('type', '=', 'contact')]"/>
+                            <field name="referal_source" domain="[('company_type', '!=', 'company'),('type', '=', 'contact'),('parent_id', '=', referring_organization)]"/>
                             <separator string="Products Purchase"/>
                         </group>
                     </group>
