[#19147] Added Selection for journal set up fee
(cherry picked from commit c7d683099867ab730a6a181ceacfca76c8b30bbb)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -142,8 +142,7 @@
                                    options="{'color_field': 'color'}"/>
                             <field name="link_to_art_files" widget="url" style="max-height: 25px;"/>
                             <field name="journal_notes" style="max-height: 25px;"/>
-                            <field name="journal_setup_fee" widget="monetary"/>
-                            <field name="journal_setup_fee_waived" widget="monetary"/>
+                             <field name="journal_setup_fee"/>
                         </group>
                         <group>
                             <field name="shipping_account"/>
